# j2534-bridge

./: Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
native/: j2534_v5_can_test.c
scripts/: build-native-j2534-test.ps1  kline-timing-sweep.ps1
src/: client.rs  j2534.rs  lib.rs  main.rs  protocol.rs  worker.rs
