[package]
name = "j2534-bridge"
version = "1.0.0"
edition = "2021"
description = "Out-of-process J2534 PassThru bridge for cross-bitness DLL loading and fault isolation."
license = "MIT"
repository = "https://github.com/mickeyl/j2534-bridge"
readme = "README.md"
rust-version = "1.70"
keywords = ["j2534", "can", "automotive", "windows", "passthru"]
categories = ["api-bindings", "hardware-support", "os::windows-apis"]

[lib]
name = "j2534_bridge"

[[bin]]
name = "j2534-bridge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
libloading = "0.8"
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
